# chess

./: .clang-format  CMakeLists.txt
src/core/: Board.cpp  Board.h  Game.cpp  Game.h  Piece.cpp  Piece.h
src/ui/: main.cpp
src/ui/view/: ChessBoardView.cpp  ChessBoardView.h
